# axum-backend

./: Cargo.toml  README.md
.devcontainer/: .env  .postgres.env  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/.env/: .app.env  .pgadmin.env
axum-backend/: Cargo.toml
axum-backend/src/: main.rs
axum-backend/src/controllers/: auth_controller.rs
axum-backend/src/services/: auth_service.rs
axum-backend/src/utils/: bcrypt_hash.rs
migrations/: 20220902052431_setup.sql  20220902125304_schema.up.sql
src/: dto.rs  error.rs  extractor.rs  lib.rs  main.rs
src/controllers/: auth_controller.rs  user_controller.rs
src/daos/: user_dao.rs
src/dtos/: user_dto.rs
src/models/: user.rs
src/services/: auth_service.rs  user_service.rs
src/utils/: encryption.rs  jwt.rs  middleware.rs
tower-sessions/: Cargo.toml
tower-sessions/src/: lib.rs  middleware.rs  utils.rs
