[package]
name = "hearthstone-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
tokio = { version = "1.20.1", features = ["full"] }
sqlx = { version = "0.6.1", features = [ "runtime-tokio-rustls", "postgres" ] }
serde = "1.0.144"