[package]
name = "hearthstone-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0-rc.2", features = ["headers"] }
tokio = { version = "1.20.1", features = ["full"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres"] }
serde = "1.0.144"
serde_json = "1.0.85"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.4", features = ["trace"] }
bcrypt = "0.13.0"
rayon = "1.5.3"
thiserror = "1.0.34"
anyhow = "1.0.64"

# middleware stuff
tower = "0.4.1"
http = "0.2.8"
axum-extra = { version = "0.4.0-rc.1", features = ["cookie-signed"] }
futures = "0.3.24"
async-session = "3.0.0"